fixing bug with invisible panel blocking interaction with page

--- a/projects/novo-elements/src/elements/aside/aside.component.scss
+++ b/projects/novo-elements/src/elements/aside/aside.component.scss
@@ -16,7 +16,7 @@
     align-items: stretch;
 
     &.draggable {
-      position: relative;
+      position: absolute;
       max-width: none;
       height: auto;
       width: 540px;
